--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,10 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
+# macos 
+._*
+.DS_Store
+
 ### Environments & Dependencies ###
 .env
 .venv
